--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: light)"
-      href="/css/light.css"
+      href="css/light.css"
     />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: dark)"
-      href="/css/dark.css"
+      href="css/dark.css"
     />
     <link
       rel="stylesheet"
@@ -537,6 +537,6 @@
       <span class="close">&times;</span>
       <img class="modal-content" id="modalImage" />
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
