--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibreriaBeca</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      media="(prefers-color-scheme: light)"
-      href="css/light.css"
-    />
-    <link
-      rel="stylesheet"
-      media="(prefers-color-scheme: dark)"
-      href="css/dark.css"
-    />
+<link rel="stylesheet" href="./css/style.css" />
+<link rel="stylesheet" media="(prefers-color-scheme: light)" href="./css/light.css" />
+<link rel="stylesheet" media="(prefers-color-scheme: dark)" href="./css/dark.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
