--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               </div>
               <a href="carrito.html" class="card" id="cart-icon"
                 >Carrito<img
-                  src="/img/iconos/carrito.svg"
+                  src="./img/iconos/carrito.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -154,7 +154,7 @@
               </div>
               <a href="#" class="card"
                 >Perfil<img
-                  src="/img/iconos/usuario.svg"
+                  src="./img/iconos/usuario.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -226,9 +226,9 @@
                   <div class="promo__item_carrucel" tabindex="0">
                     <img
                       loading="lazy"
-                      src="/img/portadas_libros/pequenio/reyes.png"
+                      src="./img/portadas_libros/pequenio/reyes.png"
                       class="promo__img"
-                      data-large="/img/portadas_libros/grande/reyes.png"
+                      data-large="./img/portadas_libros/grande/reyes.png"
                       alt="reyes"
                     />
                     <h3 class="promo__title">Reyes Caidos</h3>
@@ -237,9 +237,9 @@
                   <div class="promo__item_carrucel" tabindex="0">
                     <img
                       loading="lazy"
-                      src="/img/portadas_libros/pequenio/vidas.png"
+                      src="./img/portadas_libros/pequenio/vidas.png"
                       class="promo__img"
-                      data-large="/img/portadas_libros/grande/vidas.png"
+                      data-large="./img/portadas_libros/grande/vidas.png"
                       alt="vidas"
                     />
                     <h3 class="promo__title">Las Vidas</h3>
@@ -248,9 +248,9 @@
                   <div class="promo__item_carrucel" tabindex="0">
                     <img
                       loading="lazy"
-                      src="/img/portadas_libros/pequenio/guerrera.png"
+                      src="./img/portadas_libros/pequenio/guerrera.png"
                       class="promo__img"
-                      data-large="/img/portadas_libros/grande/guerrera.png"
+                      data-large="./img/portadas_libros/grande/guerrera.png"
                       alt="guerrera"
                     />
                     <h3 class="promo__title">La Guerrera</h3>
@@ -259,9 +259,9 @@
                   <div class="promo__item_carrucel" tabindex="0">
                     <img
                       loading="lazy"
-                      src="/img/portadas_libros/pequenio/cruce.png"
+                      src="./img/portadas_libros/pequenio/cruce.png"
                       class="promo__img"
-                      data-large="/img/portadas_libros/grande/cruce.png"
+                      data-large="./img/portadas_libros/grande/cruce.png"
                       alt="cruce"
                     />
                     <h3 class="promo__title">Cruce de Caminos</h3>
@@ -270,9 +270,9 @@
                   <div class="promo__item_carrucel" tabindex="0">
                     <img
                       loading="lazy"
-                      src="/img/portadas_libros/pequenio/cruce.png"
+                      src="./img/portadas_libros/pequenio/cruce.png"
                       class="promo__img"
-                      data-large="/img/portadas_libros/grande/cruce.png"
+                      data-large="./img/portadas_libros/grande/cruce.png"
                       alt="cruce"
                     />
                     <h3 class="promo__title">Cruce de Caminos 2</h3>
@@ -314,28 +314,28 @@
             <div class="editorial__grid">
               <div class="editorial">
                 <img
-                  src="/img/anagrama.png"
+                  src="./img/anagrama.png"
                   class="editorial__img"
                   alt="anagrama"
                 />
               </div>
               <div class="editorial">
                 <img
-                  src="/img/acantilado.png"
+                  src="./img/acantilado.png"
                   class="editorial__img"
                   alt="acantilado"
                 />
               </div>
               <div class="editorial">
                 <img
-                  src="/img/planeta.png"
+                  src="./img/planeta.png"
                   class="editorial__img"
                   alt="planeta"
                 />
               </div>
               <div class="editorial">
                 <img
-                  src="/img/tusquets.png"
+                  src="./img/tusquets.png"
                   class="editorial__img"
                   alt="rusuquets"
                 />
@@ -356,23 +356,23 @@
               <i class="bi bi-arrow-left-circle-fill"></i>
               <div class="promo__item" tabindex="0">
                 <img
-                  src="/img/fernandoMartinez.png"
+                  src="./img/fernandoMartinez.png"
                   class="promo__img"
                   alt="fernando"
                 />
                 <h3 class="promo__title">Fernando Martínez</h3>
               </div>
               <div class="promo__item" tabindex="0">
-                <img src="/img/juanPardo.png" class="promo__img" alt="juan" />
+                <img src="./img/juanPardo.png" class="promo__img" alt="juan" />
                 <h3 class="promo__title">Juan Pardo Vidal</h3>
               </div>
               <div class="promo__item" tabindex="0">
-                <img src="/img/raulQuinto.png" class="promo__img" alt="raul" />
+                <img src="./img/raulQuinto.png" class="promo__img" alt="raul" />
                 <h3 class="promo__title">Raúl Quinto Cartagena</h3>
               </div>
               <div class="promo__item" tabindex="0">
                 <img
-                  src="/img/juanManuel 1.png"
+                  src="./img/juanManuel 1.png"
                   class="promo__img"
                   alt="juanManuel"
                 />
@@ -394,7 +394,7 @@
               <div class="testemony__item animate-on-scroll">
                 <div class="client__info">
                   <img
-                    src="/img/4.png"
+                    src="./img/4.png"
                     class="client__image"
                     alt="SergioRodríguez"
                   />
@@ -412,7 +412,7 @@
               <div class="testemony__item animate-on-scroll">
                 <div class="client__info">
                   <img
-                    src="/img/1.png"
+                    src="./img/1.png"
                     class="client__image"
                     alt="AnaMartínez"
                   />
