--- a/busqueda.html
+++ b/busqueda.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibreriaBeca</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: light)"
-      href="/css/light.css"
+      href="./css/light.css"
     />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: dark)"
-      href="/css/dark.css"
+      href="./css/dark.css"
     />
     <link
       rel="stylesheet"
@@ -146,7 +146,7 @@
               </div>
               <a href="carrito.html" class="card" id="cart-icon"
                 >Carrito<img
-                  src="/img/iconos/carrito.svg"
+                  src="./img/iconos/carrito.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -159,7 +159,7 @@
               </div>
               <a href="#" class="card"
                 >Perfil<img
-                  src="/img/iconos/usuario.svg"
+                  src="./img/iconos/usuario.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -203,9 +203,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/guerrera.png"
+                  src="./img/portadas_libros/pequenio/guerrera.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/guerrera.png"
+                  data-large="./img/portadas_libros/grande/guerrera.png"
                   alt="guerrera"
                 />
                 <h3 class="promo__title">La Guerrera</h3>
@@ -221,9 +221,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/reyes.png"
+                  src="./img/portadas_libros/pequenio/reyes.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/reyes.png"
+                  data-large="./img/portadas_libros/grande/reyes.png"
                   alt="reyes"
                 />
                 <h3 class="promo__title">Reyes Caidos</h3>
@@ -250,9 +250,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/reyes.png"
+                  src="./img/portadas_libros/pequenio/reyes.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/reyes.png"
+                  data-large="./img/portadas_libros/grande/reyes.png"
                   alt="reyes"
                 />
                 <h3 class="promo__title">Reyes Caidos</h3>
@@ -268,9 +268,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/vidas.png"
+                  src="./img/portadas_libros/pequenio/vidas.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/vidas.png"
+                  data-large="./img/portadas_libros/grande/vidas.png"
                   alt="vidas"
                 />
                 <h3 class="promo__title">Las Vidas</h3>
@@ -286,9 +286,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/guerrera.png"
+                  src="./img/portadas_libros/pequenio/guerrera.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/guerrera.png"
+                  data-large="./img/portadas_libros/grande/guerrera.png"
                   alt="guerrera"
                 />
                 <h3 class="promo__title">La Guerrera</h3>
@@ -304,9 +304,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/cruce.png"
+                  src="./img/portadas_libros/pequenio/cruce.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/cruce.png"
+                  data-large="./img/portadas_libros/grande/cruce.png"
                   alt="cruce"
                 />
                 <h3 class="promo__title">Cruce de Caminos</h3>
