--- a/contacto.html
+++ b/contacto.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibreriaBeca</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: light)"
-      href="/css/light.css"
+      href="./css/light.css"
     />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: dark)"
-      href="/css/dark.css"
+      href="./css/dark.css"
     />
     <link
       rel="stylesheet"
@@ -146,7 +146,7 @@
               </div>
               <a href="carrito.html" class="card" id="cart-icon"
                 >Carrito<img
-                  src="/img/iconos/carrito.svg"
+                  src="./img/iconos/carrito.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -159,7 +159,7 @@
               </div>
               <a href="#" class="card"
                 >Perfil<img
-                  src="/img/iconos/usuario.svg"
+                  src="./img/iconos/usuario.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -221,7 +221,7 @@
                   <input type="submit" class="button" />
                 </form>
               </div>
-              <img class="img_library" src="/img/linreria 1.png" />
+              <img class="img_library" src="./img/linreria 1.png" />
             </div>
           </section>
           <section class="faq-section">
@@ -347,6 +347,6 @@
       <span class="close">&times;</span>
       <img class="modal-content" id="modalImage" />
     </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
