--- a/ficha_libro.html
+++ b/ficha_libro.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibreriaBeca</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: light)"
-      href="/css/light.css"
+      href="./css/light.css"
     />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: dark)"
-      href="/css/dark.css"
+      href="./css/dark.css"
     />
     <link
       rel="stylesheet"
@@ -146,7 +146,7 @@
               </div>
               <a href="carrito.html" class="card" id="cart-icon"
                 >Carrito<img
-                  src="/img/iconos/carrito.svg"
+                  src="./img/iconos/carrito.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -159,7 +159,7 @@
               </div>
               <a href="#" class="card"
                 >Perfil<img
-                  src="/img/iconos/usuario.svg"
+                  src="./img/iconos/usuario.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -195,9 +195,9 @@
             <div class="book__info_container">
               <img
                 loading="lazy"
-                src="/img/portadas_libros/medio/guerrera.png"
+                src="./img/portadas_libros/medio/guerrera.png"
                 class="book__image"
-                data-large="/img/portadas_libros/grande/guerrera.png"
+                data-large="./img/portadas_libros/grande/guerrera.png"
                 alt="Portada de El Camino de la Guerrera"
               />
               <div class="book__resume">
@@ -216,7 +216,7 @@
                 </p>
                 <a href="#" class="card"
                   >Leer mas<img
-                    src="/img/iconos/mas_info.svg"
+                    src="./img/iconos/mas_info.svg"
                     alt="Icono de mas info"
                     class="icono"
                 /></a>
@@ -231,7 +231,7 @@
                   aria-label="Añadir El Camino de la Guerrera al carrito"
                 >
                   <img
-                    src="/img/iconos/aniadir.svg"
+                    src="./img/iconos/aniadir.svg"
                     alt="Icono de mas añadir carrito"
                     class="icono"
                   />
@@ -317,9 +317,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/reyes.png"
+                  src="./img/portadas_libros/pequenio/reyes.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/reyes.png"
+                  data-large="./img/portadas_libros/grande/reyes.png"
                   alt="reyes"
                 />
                 <h3 class="promo__title">Reyes Caidos</h3>
@@ -335,9 +335,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/vidas.png"
+                  src="./img/portadas_libros/pequenio/vidas.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/vidas.png"
+                  data-large="./img/portadas_libros/grande/vidas.png"
                   alt="vidas"
                 />
                 <h3 class="promo__title">Las Vidas</h3>
@@ -353,9 +353,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/guerrera.png"
+                  src="./img/portadas_libros/pequenio/guerrera.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/guerrera.png"
+                  data-large="./img/portadas_libros/grande/guerrera.png"
                   alt="guerrera"
                 />
                 <h3 class="promo__title">La Guerrera</h3>
@@ -371,9 +371,9 @@
               <div class="promo__item" tabindex="0">
                 <img
                   loading="lazy"
-                  src="/img/portadas_libros/pequenio/cruce.png"
+                  src="./img/portadas_libros/pequenio/cruce.png"
                   class="promo__img"
-                  data-large="/img/portadas_libros/grande/cruce.png"
+                  data-large="./img/portadas_libros/grande/cruce.png"
                   alt="cruce"
                 />
                 <h3 class="promo__title">Cruce de Caminos</h3>
@@ -461,6 +461,6 @@
       <span class="close">&times;</span>
       <img class="modal-content" id="modalImage" />
     </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
