--- a/informacion.html
+++ b/informacion.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LibreriaBeca</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: light)"
-      href="/css/light.css"
+      href="./css/light.css"
     />
     <link
       rel="stylesheet"
       media="(prefers-color-scheme: dark)"
-      href="/css/dark.css"
+      href="./css/dark.css"
     />
     <link
       rel="stylesheet"
@@ -146,7 +146,7 @@
               </div>
               <a href="carrito.html" class="card" id="cart-icon"
                 >Carrito<img
-                  src="/img/iconos/carrito.svg"
+                  src="./img/iconos/carrito.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -159,7 +159,7 @@
               </div>
               <a href="#" class="card"
                 >Perfil<img
-                  src="/img/iconos/usuario.svg"
+                  src="./img/iconos/usuario.svg"
                   alt="Icono de carrito"
                   class="icono"
               /></a>
@@ -207,10 +207,10 @@
             <h2>Nuestro Equipo</h2>
             <div class="team__image-wrapper">
               <picture>
-                <source srcset="/img/equipo/equipo.avif" type="image/avif" />
-                <source srcset="/img/equipo/equipo.webp" type="image/webp" />
+                <source srcset="./img/equipo/equipo.avif" type="image/avif" />
+                <source srcset="./img/equipo/equipo.webp" type="image/webp" />
                 <img
-                  src="/img/equipo/equipo.jpg"
+                  src="./img/equipo/equipo.jpg"
                   alt="Foto del equipo"
                   class="team__image"
                   loading="lazy"
@@ -335,6 +335,6 @@
       <span class="close">&times;</span>
       <img class="modal-content" id="modalImage" />
     </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
